Clean DeckGenerator